package ObjetosComunicacion;

import Usuario.Usuario;
import java.util.ArrayList;
import java.util.Date;

public class Grupo {
    public ArrayList<Usuario> participantes = new ArrayList<>();
    private Date fechaCreacion;
    public Conversacion conversacion;
    public Grupo(Usuario...usuario){
    }


    public void agregarUsuario(Usuario nuevoParticipante){

    }
    public void eliminarUsuario(Usuario participante){

    }


}
