public interface Registrarse {
    public Usuario ingresarDatos();
}
