package Usuario;

public interface Conexion {
    public void conectarse();
}
