package Usuario.ObjetosComunicacion;

public enum TipoLlamada {
    AUDIO,
    VIDEO_LLAMADA
}
